--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm mb-4">
   <div class="container" style="max-width: 1200px;">
     <a class="navbar-brand d-flex align-items-center" routerLink="/">
-      <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="BookStore Logo" class="me-2" style="height: 40px;">
+      <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="BookStore Logo" class="me-2"
+           style="height: 40px;">
       <span class="fw-bold fs-4">BookStore</span>
     </a>
     <div class="collapse navbar-collapse">
