--- a/src/app/book-search/book-search.component.html
+++ b/src/app/book-search/book-search.component.html
@@ -7,13 +7,16 @@
   </div>
   <form class="row g-3 mb-4" (submit)="onSubmit($event)">
     <div class="col-md-3">
-      <input type="text" class="form-control" placeholder="Título" name="title" [(ngModel)]="filters.title" (ngModelChange)="onFilterChange()">
+      <input type="text" class="form-control" placeholder="Título" name="title" [(ngModel)]="filters.title"
+             (ngModelChange)="onFilterChange()">
     </div>
     <div class="col-md-3">
-      <input type="text" class="form-control" placeholder="Autor" name="author" [(ngModel)]="filters.author" (ngModelChange)="onFilterChange()">
+      <input type="text" class="form-control" placeholder="Autor" name="author" [(ngModel)]="filters.author"
+             (ngModelChange)="onFilterChange()">
     </div>
     <div class="col-md-2">
-      <input type="number" class="form-control" placeholder="Año" name="year" [(ngModel)]="filters.year" (ngModelChange)="onFilterChange()">
+      <input type="number" class="form-control" placeholder="Año" name="year" [(ngModel)]="filters.year"
+             (ngModelChange)="onFilterChange()">
     </div>
     <div class="col-md-2">
       <select class="form-select" name="category" [(ngModel)]="filters.category" (change)="onFilterChange()">
@@ -37,11 +40,13 @@
     @for (book of books; track book.id) {
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          <img [src]="book.imagen" [alt]="book.titulo" class="card-img-top img-fluid" style="height: 220px; object-fit: contain; width: 100%; background: #f8f9fa; display: block;">
+          <img [src]="book.imagen" [alt]="book.titulo" class="card-img-top img-fluid"
+               style="height: 220px; object-fit: contain; width: 100%; background: #f8f9fa; display: block;">
           <div class="card-body">
             <h5 class="card-title">{{ book.titulo }}</h5>
             <p class="card-text mb-1"><strong>Autor:</strong> {{ book.autor }}</p>
-            <p class="card-text mb-1"><strong>Año:</strong> {{ book['año'] }} | <strong>Categoría:</strong> {{ book.categoria }}</p>
+            <p class="card-text mb-1"><strong>Año:</strong> {{ book['año'] }} |
+              <strong>Categoría:</strong> {{ book.categoria }}</p>
             <p class="card-text">{{ book.sinopsis }}</p>
             <button class="btn btn-success w-100" (click)="addToCart(book)">Añadir al carrito</button>
           </div>
