--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -42,7 +42,7 @@
     <div class="col-md-4">
       <div class="d-flex justify-content-between align-items-center border rounded p-3 mb-2">
         <span class="fw-bold">Total:</span>
-        <span class="fs-5">$60.00</span>
+        <span class="fs-5">${{ cartTotal$ | async | number:'1.2-2' }}</span>
       </div>
       <button class="btn btn-primary w-100" (click)="openPaymentDialog()">Finalizar compra</button>
     </div>
