--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,17 +8,21 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Inicio</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+           Inicio
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/buscar" routerLinkActive="active">Buscar Libros</a>
+          <a class="nav-link" routerLink="/buscar" routerLinkActive="active">
+            Buscar Libros
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link"
              routerLink="/carrito"
-             routerLinkActive="active"
-             [ngClass]="{ 'cart-animate': ((cartItemCount$ | async) ?? 0) > 0 }">
+             routerLinkActive="active">
             Carrito
+            <span *ngIf="(cartItemCount$ | async) as count" class="badge bg-primary ms-1">{{ count }}</span>
           </a>
         </li>
       </ul>
