--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,10 +1,10 @@
 <div class="container" style="max-width: 1200px; margin: 0 auto;">
-  <div class="row align-items-center py-5 bg-light rounded shadow mb-4" style="background: url('/hero.png') center/cover no-repeat; min-height: 320px;">
+  <div class="row align-items-center py-5 hero mb-4">
     <div class="col text-center" >
-      <h1 class="display-4 fw-bold" style="color: #fff; text-shadow: 0 2px 16px #000, 0 1px 0 #fff;">
-        Bienvenido a <span style="color: snow; text-shadow: 0 2px 16px #000;">BookStore</span>
+      <h1 class="display-4 fw-bold">
+        Bienvenido a <span>BookStore</span>
       </h1>
-      <p class="lead fs-2" style="color: snow; text-shadow: 0 2px 8px #000;">
+      <p class="lead fs-2">
         Tu destino para descubrir, comprar y disfrutar los mejores libros.
       </p>
     </div>
